add_executable(chain_of_responsibility chain_of_responsibility.cpp)
add_executable(command command.cpp)
add_executable(mediator mediator.cpp)
add_executable(memento memento.cpp)
add_executable(observer observer.cpp)
add_executable(state state.cpp)
add_executable(strategy strategy.cpp)
add_executable(template_method template_method.cpp)
